--- a/gallery.html
+++ b/gallery.html
@@ -101,7 +101,7 @@
  
 
  
- <!-- Main image Gallery starts here -->
+  <!-- Main image Gallery starts here -->
 
  <div class="row m-4">
  	<div class="col-12">
@@ -111,27 +111,24 @@
 
  <!-- Code for first gallery. I had trouble seperating them -->
 
-<div class="row m-4" id="gallery" data-toggle="modal" data-target="#exampleModal">
+<div class="row m-2" id="gallery" data-toggle="modal" data-target="#exampleModal1">
   <div class="col-12 col-sm-6 col-lg-3">
-    <img class="w-100" src="https://images.unsplash.com/photo-1546853020-ca4909aef454?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ" alt="First slide" data-target="#carouselExample" data-slide-to="0">
+    <img class="w-100" src="img/gallery/modalGallery/andrew-sterling-Ja-ynO7TCyg-unsplash.jpg" alt="First slide" data-target="#carouselExample" data-slide-to="0">
   </div>
   <div class="col-12 col-sm-6 col-lg-3">
-    <img class="w-100" src="https://images.unsplash.com/photo-1546534505-d534e27ecb35?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ" alt="First slide" data-target="#carouselExample" data-slide-to="1">
+    <img class="w-100" src="img/gallery/modalGallery/nick-rickert-nMedFxsj5-k-unsplash.jpg" alt="First slide" data-target="#carouselExample" data-slide-to="1">
   </div>
   <div class="col-12 col-sm-6 col-lg-3">
-    <img class="w-100" src="https://images.unsplash.com/photo-1546111380-cfca9a43dd85?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ" alt="First slide" data-target="#carouselExample" data-slide-to="2">
+    <img class="w-100" src="img/gallery/modalGallery/hoang-m-nguyen-fk8zQlbK2GI-unsplash.jpg" alt="First slide" data-target="#carouselExample" data-slide-to="2">
   </div>
   <div class="col-12 col-sm-6 col-lg-3">
-    <img class="w-100" src="https://images.unsplash.com/photo-1547288242-f3d375fc7b5f?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ" alt="First slide" data-target="#carouselExample" data-slide-to="3">
+    <img class="w-100" src="img/gallery/modalGallery/joshua-gresham-qmZF9CptLKs-unsplash.jpg" alt="First slide" data-target="#carouselExample1" data-slide-to="3">
   </div>
 
 </div>
 
 <!-- Modal -->
-<!-- 
-This part is straight out of Bootstrap docs. Just a carousel inside a modal.
--->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-hidden="true">
+ <div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -140,32 +137,32 @@ This part is straight out of Bootstrap docs. Just a carousel inside a modal.
         </button>
       </div>
       <div class="modal-body">
-        <div id="carouselExample" class="carousel slide" data-ride="carousel">
+        <div id="carouselExample1" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
-            <li data-target="#carouselExample" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExample" data-slide-to="1"></li>
-            <li data-target="#carouselExample" data-slide-to="2"></li>
-            <li data-target="#carouselExample" data-slide-to="3"></li>
+            <li data-target="#carouselExample1" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExample1" data-slide-to="1"></li>
+            <li data-target="#carouselExample1" data-slide-to="2"></li>
+            <li data-target="#carouselExample1" data-slide-to="3"></li>
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="https://images.unsplash.com/photo-1546853020-ca4909aef454?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ" alt="First slide">
+              <img class="d-block w-100" src="img/gallery/modalGallery/andrew-sterling-Ja-ynO7TCyg-unsplash.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="https://images.unsplash.com/photo-1546534505-d534e27ecb35?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ" alt="Second slide">
+              <img class="d-block w-100" src="img/gallery/modalGallery/nick-rickert-nMedFxsj5-k-unsplash.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="https://images.unsplash.com/photo-1546111380-cfca9a43dd85?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ" alt="Third slide">
+              <img class="d-block w-100" src="img/gallery/modalGallery/hoang-m-nguyen-fk8zQlbK2GI-unsplash.jpg" alt="Third slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="https://images.unsplash.com/photo-1547288242-f3d375fc7b5f?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ" alt="Fourth slide">
+              <img class="d-block w-100" src="img/gallery/modalGallery/joshua-gresham-qmZF9CptLKs-unsplash.jpg" alt="Fourth slide">
             </div>
           </div>
-          <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
+          <a class="carousel-control-prev" href="#carouselExample1" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
           </a>
-          <a class="carousel-control-next" href="#carouselExample" role="button" data-slide="next">
+          <a class="carousel-control-next" href="#carouselExample1" role="button" data-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
           </a>
@@ -183,27 +180,25 @@ This part is straight out of Bootstrap docs. Just a carousel inside a modal.
 <!-- Second gallery starts here -->
 
 
-    <div class="row m-4" id="gallery" data-toggle="modal" data-target="#exampleModal">
+    <div class="row m-2" id="gallery" data-toggle="modal" data-target="#exampleModal2">
   <div class="col-12 col-sm-6 col-lg-3">
-    <img class="w-100" src="https://images.unsplash.com/photo-1546853020-ca4909aef454?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ" alt="First slide" data-target="#carouselExample" data-slide-to="0">
+    <img class="w-100" src="img/gallery/modalGallery/bruce-warrington-cWahHehTwk8-unsplash.jpg" alt="First slide" data-target="#carouselExample2" data-slide-to="0">
   </div>
   <div class="col-12 col-sm-6 col-lg-3">
-    <img class="w-100" src="https://images.unsplash.com/photo-1546534505-d534e27ecb35?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ" alt="First slide" data-target="#carouselExample" data-slide-to="1">
+    <img class="w-100" src="https://images.unsplash.com/photo-1546534505-d534e27ecb35?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ" alt="First slide" data-target="#carouselExample2" data-slide-to="1">
   </div>
   <div class="col-12 col-sm-6 col-lg-3">
-    <img class="w-100" src="https://images.unsplash.com/photo-1546111380-cfca9a43dd85?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ" alt="First slide" data-target="#carouselExample" data-slide-to="2">
+    <img class="w-100" src="img/gallery/modalGallery/stephen-leonardi-YKZyNnqGSKI-unsplash.jpg" alt="First slide" data-target="#carouselExample2" data-slide-to="2">
   </div>
   <div class="col-12 col-sm-6 col-lg-3">
-    <img class="w-100" src="https://images.unsplash.com/photo-1547288242-f3d375fc7b5f?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ" alt="First slide" data-target="#carouselExample" data-slide-to="3">
+    <img class="w-100" src="img/gallery/modalGallery/diana-orey-AySfVkv4s3k-unsplash.jpg" alt="First slide" data-target="#carouselExample2" data-slide-to="3">
   </div>
 
 </div>
 
 <!-- Modal -->
-<!-- 
-This part is straight out of Bootstrap docs. Just a carousel inside a modal.
--->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-hidden="true">
+ 
+<div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -212,32 +207,32 @@ This part is straight out of Bootstrap docs. Just a carousel inside a modal.
         </button>
       </div>
       <div class="modal-body">
-        <div id="carouselExample" class="carousel slide" data-ride="carousel">
+        <div id="carouselExample2" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
-            <li data-target="#carouselExample" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExample" data-slide-to="1"></li>
-            <li data-target="#carouselExample" data-slide-to="2"></li>
-            <li data-target="#carouselExample" data-slide-to="3"></li>
+            <li data-target="#carouselExample2" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExample2" data-slide-to="1"></li>
+            <li data-target="#carouselExample2" data-slide-to="2"></li>
+            <li data-target="#carouselExample2" data-slide-to="3"></li>
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="https://images.unsplash.com/photo-1546853020-ca4909aef454?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ" alt="First slide">
+              <img class="d-block w-100" src="img/gallery/modalGallery/bruce-warrington-cWahHehTwk8-unsplash.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
               <img class="d-block w-100" src="https://images.unsplash.com/photo-1546534505-d534e27ecb35?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ" alt="Second slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="https://images.unsplash.com/photo-1546111380-cfca9a43dd85?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ" alt="Third slide">
+              <img class="d-block w-100" src="img/gallery/modalGallery/stephen-leonardi-YKZyNnqGSKI-unsplash.jpg" alt="Third slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="https://images.unsplash.com/photo-1547288242-f3d375fc7b5f?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ" alt="Fourth slide">
+              <img class="d-block w-100" src="img/gallery/modalGallery/diana-orey-AySfVkv4s3k-unsplash.jpg" alt="Fourth slide">
             </div>
           </div>
-          <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
+          <a class="carousel-control-prev" href="#carouselExample2" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
           </a>
-          <a class="carousel-control-next" href="#carouselExample" role="button" data-slide="next">
+          <a class="carousel-control-next" href="#carouselExample2" role="button" data-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
           </a>
@@ -253,7 +248,6 @@ This part is straight out of Bootstrap docs. Just a carousel inside a modal.
 <!-- Second gallery ends here -->
    
 <!-- end of Gallery code -->
-       
 
 <footer> <!-- Footer -->
   <div class="row my-3">
